--- a/aurumiqwebsite.html
+++ b/aurumiqwebsite.html
@@ -6,7 +6,7 @@
     <title>AurumIQ Strategy Consultancy</title>
     <style>
         body {
-            background: url('https://github.com/lizdeucker/aurumiq-website/blob/main/Website%20background.jpg') no-repeat center center fixed;
+            background: url('https://github.com/lizdeucker/aurumiq-website/blob/main/Website%20background.jpg?raw=true') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             height: 100vh;
