--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             background: url('https://raw.githubusercontent.com/lizdeucker/aurumiq-website/refs/heads/main/Website%20background.jpg') no-repeat center center fixed;
             background-size: cover;
+            background-color: #0A0A23; /* Dark navy */
             margin: 0;
             height: 100vh;
         }
