--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
             margin: 0;
             height: 100vh;
         }
+
+/* Mobile-specific styles */
+@media (max-width: 768px) { 
+    body {
+        background: url('https://raw.githubusercontent.com/lizdeucker/aurumiq-website/main/Website-mobile.jpg') no-repeat center center fixed;
+        background-size: contain; /* Keeps aspect ratio */
+        background-color: #0A0A23;
+    }
+}
     </style>
 </head>
 <body>
