--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 /* Mobile-specific styles */
 @media (max-width: 768px) { 
     body {
-        background: url('https://raw.githubusercontent.com/lizdeucker/aurumiq-website/refs/heads/main/mobile%20website.jpg') no-repeat center center fixed;
+        background: url('https://raw.githubusercontent.com/lizdeucker/aurumiq-website/refs/heads/main/mobile%20website.png') no-repeat center center fixed;
         background-size: contain; /* Keeps aspect ratio */
         background-color: #0A0A23;
     }
